--- a/package.json
+++ b/package.json
@@ -168,7 +168,8 @@
     "@storybook/addon-essentials": "^6.3.5",
     "@storybook/addon-links": "^6.3.5",
     "@storybook/react": "^6.3.5",
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.11"
   },
   "husky": {
     "hooks": {
