--- a/package.json
+++ b/package.json
@@ -169,7 +169,9 @@
     "@storybook/addon-links": "^6.3.5",
     "@storybook/react": "^6.3.5",
     "@types/react-router-dom": "^5.1.8",
-    "@types/styled-components": "^5.1.11"
+    "@types/redux-mock-store": "^1.0.3",
+    "@types/styled-components": "^5.1.11",
+    "redux-mock-store": "^1.5.4"
   },
   "husky": {
     "hooks": {
