--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ronit123321.github.io/july-23-task",
   "name": "july-23-task",
   "version": "0.1.0",
   "private": true,
@@ -86,7 +87,9 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -172,6 +175,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/redux-mock-store": "^1.0.3",
     "@types/styled-components": "^5.1.11",
+    "gh-pages": "^3.2.3",
     "redux-mock-store": "^1.5.4"
   },
   "husky": {
